[refactor] resolve conflict and fix npt of deleteGrafanaDashboard